Grease Pencil Keyframe moves to the right in the dope sheet on stroke and simultaneously selecting Brush tool using custom shortcut. #88160

Closed
opened 2021-05-09 23:32:19 +02:00 by zdeněk · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.30

Blender Version
Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-04 20:58, hash: 96abe5ebbc
Worked: (newest version of Blender that worked as expected)

Short description of error
When i use shortcut to quickly switch between eraser (custom shortcut E ) and brush (custom shortcut B ), keyframe moves one frame to the right in the dope sheet timeline.

Exact steps for others to reproduce the error
lzL5Gh3nSj.gif

  1. have an eraser tool selected
  2. switch to brush tool and simultaneously make a stroke on the canvas
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 462.30 **Blender Version** Broken: version: 2.93.0 Beta, branch: master, commit date: 2021-05-04 20:58, hash: `96abe5ebbc` Worked: (newest version of Blender that worked as expected) **Short description of error** When i use shortcut to quickly switch between eraser (custom shortcut E ) and brush (custom shortcut B ), keyframe moves one frame to the right in the dope sheet timeline. **Exact steps for others to reproduce the error** ![lzL5Gh3nSj.gif](https://archive.blender.org/developer/F10069368/lzL5Gh3nSj.gif) 1. have an eraser tool selected 2. switch to brush tool and simultaneously make a stroke on the canvas
Author

Added subscriber: @The_Zadek

Added subscriber: @The_Zadek
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

This is because the {key B} key while drawing will insert a blank keyframe. Those shortcuts are hardcoded and inaccessible to the user so there is no way to change them. They should be part of the keymap. I will merge this with the task that addresses the issue.

This is because the {key B} key while drawing will insert a blank keyframe. Those shortcuts are hardcoded and inaccessible to the user so there is no way to change them. They should be part of the keymap. I will merge this with the task that addresses the issue.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

To Do task: #88171

To Do task: #88171

This issue was referenced by a63d6a97f0

This issue was referenced by a63d6a97f0a01515896c0dcb0f7fe30a239db4e6

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2021-05-10 16:36:21 +02:00

Fixed with 0467979425

Fixed with 04679794259f
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy
Contributor

@antoniov I guess that for this issue to be fully closed the fix can/should go to the blender-v2.93-release branch ? It is a report from a 2.93.0 Beta version.

@antoniov I guess that for this issue to be fully closed the fix can/should go to the blender-v2.93-release branch ? It is a report from a 2.93.0 Beta version.

@dupoxy done!

@dupoxy done!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88160
No description provided.