Fix T88160: GPencil Remove `B` key to create Blank Keyframe in Drawing mode

Now, we have the new `I` menu for that. The `B`keymap  was part of the old code.